--- a/src/style/layoutAdmin.css
+++ b/src/style/layoutAdmin.css
@@ -87,7 +87,7 @@
   
   .sidebar-list-item {
     padding: 20px 20px 20px 20px;
-    font-size: 18px;
+    font-size: 20px;
   }
   
   .sidebar-list-item:hover {
@@ -97,7 +97,7 @@
   
   .sidebar-list-item > a {
     text-decoration: none;
-    color: #9e9ea4;
+    color: #fff;
   }
   
   .sidebar-responsive {
