--- a/src/style/adminEvent.css
+++ b/src/style/adminEvent.css
@@ -1,12 +1,18 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
 .event-manage{
     grid-area: main;
+    overflow-y: auto;
     background-color: #f1f5f9;
 }
 
 .button-container{
     display: flex;
     justify-content: flex-end;
-    padding: 10px;
+    padding-top: 20px;
 }
 
 .list-event{
