--- a/src/style/layoutAdmin.css
+++ b/src/style/layoutAdmin.css
@@ -111,7 +111,7 @@
     z-index: 12 !important;
   }
   
-  .main-container {
+  /* .main-container {
     grid-area: main;
     overflow-y: auto;
     padding: 20px 20px;
@@ -172,7 +172,7 @@
     height: 300px;
   }
   
-  /* End Main  */
+  End Main  */
   
   
   /* Medium <= 992px */
