--- a/src/style/dashBoard.css
+++ b/src/style/dashBoard.css
@@ -59,14 +59,16 @@
     font-size: 25px;
 }
 .charts {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    display: flex;
+    /* grid-template-rows: 1fr 1fr 1fr; */
     gap: 20px;
     margin-top: 60px;
     height: 300px;
 }
 
 .chart-card{
+    width: 90%;
+    height: auto;
     background-color: #f4f4f4;
     border: 1px solid #ccc;
     padding: 10px;
