--- a/src/style/layoutAdmin.css
+++ b/src/style/layoutAdmin.css
@@ -33,7 +33,7 @@
   grid-template-columns: 260px 1fr 1fr 1fr;
   grid-template-rows: 0.2fr 3fr;
   grid-template-areas:
-    "sidebar header header header"
+    "sidebar main main main"
     "sidebar main main main";
   height: 100vh;
 }
@@ -42,7 +42,7 @@
   height: 60px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: end;
   padding: 0 30px 0 30px;
   box-shadow: 0 6px 7px -3px rgba(0, 0, 0, 0.35);
 }
@@ -182,7 +182,7 @@
     grid-template-columns: 1fr;
     grid-template-rows: 0.2fr 3fr;
     grid-template-areas:
-      "header"
+      "main"
       "main";
   }
 
