--- a/src/style/manageAccounts.css
+++ b/src/style/manageAccounts.css
@@ -7,7 +7,7 @@
 .button-account{
     display: flex;
     justify-content: space-between;
-    padding: 10px;
+    padding: 20px;
     h3{
         padding-left: 20px;
     }
@@ -28,4 +28,9 @@
     padding: 10px;
     margin: 20px;
     box-shadow: 0 6px 7px -3px rgba(0, 0, 0, 0.35);
+}
+
+.sort-table{
+    display: flex;
+    justify-content: space-between;
 }
