--- a/src/style/coordinator.css
+++ b/src/style/coordinator.css
@@ -1,5 +1,18 @@
-.coordinator-container{
+*{
+  margin: 0;
+  padding: 0;
+}
+
+.coordinator{
   grid-area: main;
   overflow-y: auto;
   background-color: #f1f5f9;
+}
+
+.title {
+  background-color: #f4f4f4;
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin: 20px;
+  box-shadow: 0 6px 7px -3px rgba(0, 0, 0, 0.35);
 }
